tests/ui/g-control-local-cross-role.stderr
error[E0080]: evaluation panicked: control descriptor path does not match message roles
 --> $RUST/core/src/panic.rs
  |
  = note: evaluation of `hibana::g::send::<1, 2, hibana::g::ControlMsg<1, hibana::g::control::LoopContinue>>::{constant#0}` failed here
  |
 ::: src/g.rs
  |
  |             panic!("{}", error.message());
  |             ----------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  | /     const {
  | |         if FROM >= ROLE_DOMAIN_SIZE || TO >= ROLE_DOMAIN_SIZE {
  | |             panic!("{}", ROLE_INDEX_ERROR);
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<1, 2, ControlMsg<1, LoopContinue>>`
 --> tests/ui/g-control-local-cross-role.rs:6:13
  |
6 |     let _ = g::send::<1, 2, g::ControlMsg<1, g::control::LoopContinue>>();
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
